--- a/index.html
+++ b/index.html
@@ -1,12 +1,335 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>it-studio</title>
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" / >
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+
+  <body>
+    <header>
+      <div>
+        <nav>
+          <ul>
+            <li>
+              <a href="">Главная</a>
+            </li>
+            <li>
+              <a href="">Наши проекты</a>
+            </li>
+            <li >
+              <a  href="">Услуги</a>
+            </li>
+            <li>
+              <a  href="">Новости</a>
+            </li>
+            <li>
+              <a href="">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section >
+        <div >
+          <h1>Передовая ІТ студия</h1>
+          <p>
+            Мы создаем легкие решения сложных задач и проблем
+          </p>
+          <button type="button">
+            Наши проекты
+          </button>
+        </div>
+      </section>
+
+      <section>
+        <div>
+          <h2>
+            Мы создаем мобильные приложения для крупных корпораций
+          </h2>
+          <p>
+            Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+            вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
+            латинице с начала XVI века.
+          </p>
+          <ul >
+            <li>
+              <div>
+                <div>
+                  <svg  width="40" height="40">
+                    <use href="./images/icons.svg#icon-project"></use>
+                  </svg>
+                </div>
+              </div>
+              <div>
+                <h3>Создание сайтов</h3>
+                <p>
+                  Lorem Ipsum - это текст- "рыба", часто используе в печати и
+                  вэб-дизайне.
+                </p>
+              </div>
+            </li>
+            <li>
+              <div>
+                <div>
+                  <svg width="40" height="40">
+                    <use href="./images/icons.svg#icon-project"></use>
+                  </svg>
+                </div>
+              </div>
+              <div >
+                <h3>Создание сайтов</h3>
+                <p>
+                  Lorem Ipsum - это текст- "рыба", часто используе в печати и
+                  вэб-дизайне.
+                </p>
+              </div>
+            </li>
+            <li>
+              <div>
+                <div>
+                  <svg  width="40" height="40">
+                    <use href="./images/icons.svg#icon-project"></use>
+                  </svg>
+                </div>
+              </div>
+              <div >
+                <h3>Создание сайтов</h3>
+                <p>
+                  Lorem Ipsum - это текст- "рыба", часто используе в печати и
+                  вэб-дизайне.
+                </p>
+              </div>
+            </li>
+          </ul>
+          <button type="button">Все услуги</button>
+        </div>
+      </section>
+      <!-- про нас -->
+      <section>
+        <div>
+          <div>
+            <div>
+              <h2>
+                Высокие стандарты разработки
+              </h2>
+              <p>
+                Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+                вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для
+                текстов на латинице с начала XVI века. стандартной "рыбой" для
+                текстов на латинице с начала XVI века.
+              </p>
+              <a href=""
+                >Подробнее о компании</a
+              >
+            </div>
+            <img src="./images/about-image.png" alt="рабочий стол" />
+          </div>
+
+          <ul>
+            <li>
+              <span>125</span>
+              <p lang="en">Our projects</p>
+            </li>
+            <li>
+              <span>125</span>
+              <p lang="en">Our projects</p>
+            </li>
+            <li>
+              <span >125</span>
+              <p lang="en">Our projects</p>
+            </li>
+            <li>
+              <span>125</span>
+              <p lang="en">Our projects</p>
+            </li>
+            <li>
+              <span>125</span>
+              <p lang="en">Our projects</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section>
+        <div>
+          <div>
+            <h2>
+              Наши работы, на которых мы специализируемся
+            </h2>
+            <button type="button">Все услуги</button>
+          </div>
+          <ul>
+            <li>
+              <img src="./images/works.png" alt="works prossesing" />
+              <h3>
+                <span>01.</span> Исследование и
+    >
+                Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+                вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для
+                текстов на латинице с начала XVI века.
+              </p>
+              <a href="">Подробнее</a>
+            </li>
+            <li>
+              <img src="./images/works.png" alt="works prossesing" />
+              <h3>
+                <span>01.</span> Исследование и
+                упаковка
+              </h3>
+              <p>
+                Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+                вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для
+                текстов на латинице с начала XVI века.
+              </p>
+              <a href="">Подробнее</a>
+            </li>
+
+            <li>
+              <img src="./images/works.png" alt="works prossesing" />
+              <h3>
+                <span>01.</span> Исследование и
+                упаковка
+              </h3>
+              <p>
+                Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+                вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для
+                текстов на латинице с начала XVI века.
+              </p>
+              <a href="">Подробнее</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section>
+        <div>
+          <h2>Наши проекты</h2>
+          <p >
+            Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+            вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
+            латинице с начала XVI века.
+          </p>
+          <ul>
+            <li>
+              <img src="./images/our-projects.png" alt="код" />
+            </li>
+            <li >
+              <img src="./images/our-projects.png" alt="код" />
+            </li>
+            <li>
+              <img src="./images/our-projects.png" alt="код" />
+            </li>
+            <li>
+              <img src="./images/our-projects.png" alt="код" />
+            </li>
+          </ul>
+          <button type="button">Все проекты</button>
+        </div>
+      </section>
+      <section>
+        <h2>Видео о нашей работе</h2>
+        <p>Просто посмотрите, как мы работаем</p>
+      </section>
+
+      <section>
+        <b>Подпишитесь на нашу рассылку</b>
+        <p>Полезные статьи, акции, новости - получите все это сейчас!</p>
+        <form>
+          <input type="email" name="email" placeholder="Ваш e-mail" />
+          <button type="submit">Подписаться</button>
+        </form>
+        <p>Мы не шлем спам, и передаем никому ваши данные.</p>
+      </section>
+    </main>
+
+    <footer>
+      <ul>
+        <li>
+          <b>Контактная информация</b>
+          <ul>
+            <li>
+              <a href="mailto:test@tesr.ru">test@test.ru</a>
+            </li>
+            <li>
+              <a href="tel:+87775556699">+8 777 555 66 99</a>
+            </li>
+            <li>
+              <a href="">Москва, Бульвар Ленина 3</a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <b>Основные ссылки</b>
+          <ul>
+            <li>
+              <a href="">Главная</a>
+            </li>
+            <li>
+              <a href="">Наши проекты</a>
+            </li>
+            <li>
+              <a href="">Наши услуги</a>
+            </li>
+            <li>
+              <a href="">Контакты</a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <b>Наши проекты</b>
+          <ul>
+            <li>
+              <a href="">РосНано</a>
+            </li>
+            <li>
+              <a href="">Сколково</a>
+            </li>
+            <li>
+              <a href="">Проект “Восток”</a>
+            </li>
+            <li>
+              <a href="">ТЭЦ Калининграда</a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <b>Социальные сети</b>
+          <ul>
+            <li>
+              <a href="">VK.com</a>
+            </li>
+            <li>
+              <a href="">Instagram</a>
+            </li>
+            <li>
+              <a href="">Facebook</a>
+            </li>
+            <li>
+              <a href="">Twitter</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+
+      <p>(с) 2019. Все права защищены.</p>
+    </footer>
+
+  </body>
 </html>
