--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
   </head>
 
   <body>
-    <header>
-      <div>
-        <nav>
-          <ul>
-            <li>
-              <a href="">Главная</a>
+    <header class="header">
+      <div class="container">
+        <nav class="nav">
+          <ul class="nav-list list">
+            <li class="nav-item">
+              <a href="" class="nav-link link">Главная</a>
             </li>
-            <li>
-              <a href="">Наши проекты</a>
+            <li class="nav-item">
+              <a href="" class="nav-link link">Наши проекты</a>
             </li>
-            <li >
-              <a  href="">Услуги</a>
+            <li class="nav-item">
+              <a  href="" class="nav-link link">Услуги</a>
             </li>
-            <li>
-              <a  href="">Новости</a>
+            <li class="nav-item">
+              <a  href="" class="nav-link link">Новости</a>
             </li>
-            <li>
-              <a href="">Контакты</a>
+            <li class="nav-item">
+              <a href="" class="nav-link link">Контакты</a>
             </li>
           </ul>
         </nav>
