add hero section

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
       </div>
     </header>
     <main>
-      <section >
-        <div >
-          <h1>Передовая ІТ студия</h1>
-          <p>
+      <section class="hero-section">
+        <div class="container">
+          <h1 class="hero-title">Передовая ІТ студия</h1>
+          <p class="hero-desc">
             Мы создаем легкие решения сложных задач и проблем
           </p>
-          <button type="button">
+          <button type="button" class="btn">
             Наши проекты
           </button>
         </div>
