made section works

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         </div>
       </section>
 
-      <section>
-        <div>
-          <h2>
+      <section class="works">
+        <div class="container">
+          <h2 class="works-title">
             Мы создаем мобильные приложения для крупных корпораций
           </h2>
-          <p>
+          <p class="works-desc">
             Lorem Ipsum - это текст-"рыба", часто используемый в печати и
             вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
             латинице с начала XVI века.
