--- a/index.html
+++ b/index.html
@@ -66,50 +66,50 @@
             вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
             латинице с начала XVI века.
           </p>
-          <ul >
-            <li>
-              <div>
-                <div>
+          <ul class="works-list list">
+            <li class="works-item">
+              <div class="first-wrap">
+                <div class="second-wrap">
                   <svg  width="40" height="40">
                     <use href="./images/icons.svg#icon-project"></use>
                   </svg>
                 </div>
               </div>
-              <div>
-                <h3>Создание сайтов</h3>
-                <p>
+              <div class="wrap-text">
+                <h3 class="work-list-title">Создание сайтов</h3>
+                <p class="work-list-text">
                   Lorem Ipsum - это текст- "рыба", часто используе в печати и
                   вэб-дизайне.
                 </p>
               </div>
             </li>
-            <li>
-              <div>
-                <div>
+            <li class="works-item">
+              <div class="first-wrap">
+                <div class="second-wrap">
                   <svg width="40" height="40">
                     <use href="./images/icons.svg#icon-project"></use>
                   </svg>
                 </div>
               </div>
-              <div >
-                <h3>Создание сайтов</h3>
-                <p>
+              <div class="wrap-text">
+                <h3 class="work-list-title">Создание сайтов</h3>
+                <p class="work-list-text">
                   Lorem Ipsum - это текст- "рыба", часто используе в печати и
                   вэб-дизайне.
                 </p>
               </div>
             </li>
-            <li>
-              <div>
-                <div>
+            <li class="works-item">
+              <div class="first-wrap">
+                <div class="second-wrap">
                   <svg  width="40" height="40">
                     <use href="./images/icons.svg#icon-project"></use>
                   </svg>
                 </div>
               </div>
-              <div >
-                <h3>Создание сайтов</h3>
-                <p>
+              <div class="wrap-text">
+                <h3 class="work-list-title">Создание сайтов</h3>
+                <p class="work-list-text">
                   Lorem Ipsum - это текст- "рыба", часто используе в печати и
                   вэб-дизайне.
                 </p>
