added classes to svg

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <li class="works-item">
               <div class="first-wrap">
                 <div class="second-wrap">
-                  <svg  width="40" height="40">
+                  <svg  width="40" height="40" class="works-icon">
                     <use href="./images/icons.svg#icon-project"></use>
                   </svg>
                 </div>
@@ -86,7 +86,7 @@
             <li class="works-item">
               <div class="first-wrap">
                 <div class="second-wrap">
-                  <svg width="40" height="40">
+                  <svg width="40" height="40" class="works-icon">
                     <use href="./images/icons.svg#icon-project"></use>
                   </svg>
                 </div>
@@ -102,7 +102,7 @@
             <li class="works-item">
               <div class="first-wrap">
                 <div class="second-wrap">
-                  <svg  width="40" height="40">
+                  <svg  width="40" height="40" class="works-icon">
                     <use href="./images/icons.svg#icon-project"></use>
                   </svg>
                 </div>
