--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="nav">
           <ul class="nav-list list">
             <li class="nav-item">
-              <a href="" class="nav-link link">Главная</a>
+              <a href="" class="nav-link link current">Главная</a>
             </li>
             <li class="nav-item">
               <a href="" class="nav-link link">Наши проекты</a>
