Add color for icons

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               </div>
             </li>
           </ul>
-          <button type="button">Все услуги</button>
+          <button type="button" class="btn">Все услуги</button>
         </div>
       </section>
       <!-- про нас -->
