add svg and back

--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
 
           <ul>
             <li>
+              <svg width="30" height="30">
+                <use href="./images/icons.svg#icon-teg"></use>
+              </svg>
               <span>125</span>
               <p lang="en">Our projects</p>
             </li>
@@ -164,7 +167,8 @@
           </ul>
         </div>
       </section>
-      <section>
+
+      <section class="spec">
         <div>
           <div>
             <h2>
