--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
               <a href="" class="nav-link link">Контакты</a>
             </li>
           </ul>
+          <label class="lable-togle">
+            <input type="checkbox" class="check-togle visually-hidden">
+            <div class="cercl-wrap">
+              <div class="cercl-togle"></div>
+            </div>
+          </label>
         </nav>
       </div>
     </header>
