added custom checkbox

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
               <div class="cercl-togle"></div>
             </div>
           </label>
+          <label class="lable-togle">
+            <input type="checkbox" class="check-input visually-hidden">
+            <svg width="16" height="15" class="check-icon">
+              <use href="./images/icons.svg#uncheck" class="uncheck"></use>
+              <use href="./images/icons.svg#check" class="check"></use>
+            </svg>
+          </label>
         </nav>
       </div>
     </header>
