--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Raleway:wght@700&display=swap"
       rel="stylesheet"
     />
-
+<link rel="stylesheet" href="./css/main.min.css" />
     <link rel="stylesheet" href="./styles.css" />
   </head>
 
   <body>
     <header class="header">
+      <div class="auto-wrap">
+        <div class="auto lanos"></div>
+        <div class="auto daewoo"></div>
+        <div class="auto mers"></div>
+        <div class="auto audi "></div>
+      </div>
       <div class="container">
         <nav class="nav">
           <ul class="nav-list list">
