add mixin adaptiv

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
         <div class="auto mers"></div>
         <div class="auto audi "></div>
       </div>
+      <div class="adaptive">
+        <div class="adaptiv__box"></div>
+        <div class="adaptiv__box"></div>
+        <div class="adaptiv__box"></div>
+      </div>
       <div class="container">
         <nav class="nav">
           <ul class="nav-list list">
